[project]
name = "storm_agent"
version = "0.1.0"
description = "storm-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
storm_agent = "storm_agent.main:run"
run_crew = "storm_agent.main:run"
train = "storm_agent.main:train"
replay = "storm_agent.main:replay"
test = "storm_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
